# prusa-workshop-samples

./: .gitattributes  CMakeLists.txt
day1/: CMakeLists.txt
day1/data-driven/: month-tests.cpp  month.cpp  month.hpp
day1/divisors/: divisors-tests.cpp  divisors.cpp  divisors.hpp
day1/factorial/: factorial-tests.cpp  factorial.cpp  factorial.hpp
day1/graph/: graph-tests.cpp  graph.cpp  graph.hpp
day1/join/: join-tests.cpp  join.cpp  join.hpp
day1/mock/: algos-tests.cpp  algos.hpp
day1/mock-framework/: stopwatch-tests.cpp  stopwatch.hpp  trompeloeil-catch-integration.hpp
day1/property/: sort-tests.cpp  sort.hpp
day1/split/: split-tests.cpp  split.cpp  split.hpp
day1/type-driven/: id-types-tests.cpp  id-types.hpp
